# qthelloworld

./: .gitignore  CMakeLists.txt
docs/: README.md
src/: CMakeLists.txt  main.cpp  main.hpp
